test/SemanticAnalysis/Exceptions/ThrowInNoExceptIndirectly.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

exception ExampleError(int value);

void functionThatThrows() {
	throw ExampleError(1);
}

// CHECK: .loci:11:17: error: function '::function' is declared as 'noexcept' but can throw
void function() noexcept {
	functionThatThrows();
}

// CHECK: 1 error generated.
